# timelapser

./: .gitignore  CMakeLists.txt  Makefile  encoder.c  encoder.cpp  example.c  main.cpp  main_.cpp  muxing.c  mwe.c  video_reader.cpp  windowed.cpp
src/: frame.cpp  frame.h  handler.cpp  handler.h  logging.cpp  logging.h  video_encoder.cpp  video_encoder.h  video_renderer.cpp  video_renderer.h  webcamera.cpp  webcamera.h
